# 101colab

./: VideoLingo.ipynb  forecasting.ipynb  gemini.ipynb  hf_audio.ipynb  llm_test.ipynb  pdf_translate_en_zh.ipynb  pyproject.toml  template.ipynb
pdf/: pdf_translate_en_zh.ipynb  pyproject.toml
